<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_parameters">

    <fragment
        android:id="@+id/navigation_parameters"
        android:name="fr.delcey.fizzbuzz.ui.parameters.ParametersFragment"
        android:label="@string/title_parameters"
        tools:layout="@layout/fragment_parameters" />

    <fragment
        android:id="@+id/navigation_fizzbuzzlist"
        android:name="fr.delcey.fizzbuzz.ui.list.FizzbuzzListFragment"
        android:label="@string/title_fizzbuzzlist"
        tools:layout="@layout/fragment_fizzbuzz_list" />

    <fragment
        android:id="@+id/navigation_stats"
        android:name="fr.delcey.fizzbuzz.ui.stats.StatsFragment"
        android:label="@string/title_stats"
        tools:layout="@layout/fragment_stats" />
</navigation>