<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.parameters.ParametersFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/parametersTextInputLayoutInt1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/parametersTextInputEditTextInt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/int1"
            android:imeOptions="actionNext"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/parametersTextInputLayoutInt2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/parametersTextInputLayoutInt1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/parametersTextInputEditTextInt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/int2"
            android:imeOptions="actionNext"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/parametersTextInputLayoutLimit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/parametersTextInputLayoutInt2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/parametersTextInputEditTextLimit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/limit"
            android:imeOptions="actionNext"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/parametersTextInputLayoutStr1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/parametersTextInputLayoutLimit">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/parametersTextInputEditTextStr1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str1"
            android:imeOptions="actionNext"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/parametersTextInputLayoutStr2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/parametersTextInputLayoutStr1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/parametersTextInputEditTextStr2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str2"
            android:imeOptions="actionDone"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/parametersButtonConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/confirm"
        app:layout_constraintTop_toBottomOf="@id/parametersTextInputLayoutStr2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>